# Rust-YOLOv11-ONNX-Runtime

./: Cargo.toml
src/: main.rs
