[package]
name = "yolov11"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.8", features = ["load-dynamic"] }
ndarray = "*"
image = "*"
opencv = { version = "*", features = ["imgproc"] }
log = "*"
env_logger = "*"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "3"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
